--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>"Mastering a spectrum of skills, I excel in front-end and back-end development, bringing dynamic web
-            solutions to life. Proficient in HTML,CSS,JavaScript and adept at harnessing the power of frameworks like
-            Angular and Node.js, I create seamless digital journeys that leave a lasting impact."</p>
+            solutions to life. Good in HTML,CSS,JavaScript, I create seamless digital journeys that leave a lasting impact."</p>
         </div>
 
         <div class="row skills-content">
@@ -202,9 +201,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Proactive and results-driven software developer with a strong foundation in HTML/CSS Language. Gained hands-on experience in development some websites,
+            showcasing the ability to implement robust code and work seamlessly in team settings. 
+            Eager to contribute to a dynamic tech team and grow within the software development industry.</p>
         </div>
 
         <!-- <div class="row">
