--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Proactive and results-driven software developer with a strong foundation in HTML/CSS Language. Gained hands-on experience in development some websites,
+          <p>Proactive and results-driven software developer with a strong foundation in programming languages. Gained hands-on experience in development some websites,
             showcasing the ability to implement robust code and work seamlessly in team settings. 
             Eager to contribute to a dynamic tech team and grow within the software development industry.</p>
         </div>
